# AirQualityApp

./: CMakeLists.txt  data_fetcher.cpp  data_fetcher.h  data_storage.cpp  data_storage.h  main.cpp
